package ar.edu.utn.frba.dds.hecho;

public enum HechoOrigen {
  CONTRIBUYENTE, MANUAL, EXTERNO
}
